Bug 1773822 - Prevent mass exodus of MSF files by closing DB after getting attribute. r=benc

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/102/bugs/1773822-no-mass-msf-exodus.patch

Differential Revision: https://phabricator.services.mozilla.com/D149799

--HG--
extra : amend_source : 2d40de6111f1a56b0901e602e9a87977aca6042e